--- a/nag2al.service
+++ b/nag2al.service
@@ -1,6 +1,7 @@
 [Service]
-ExecSearchPath=/usr/local/bin/usr/bin:/bin:%h/.local/bin
-ExecStart=nag2al-wrapper
+# FIXME: uncomment in systemd/bullseye-backports.
+#ExecSearchPath=/usr/local/bin/usr/bin:/bin:%h/.local/bin
+ExecStart=%h/.local/bin/nag2al-wrapper
 
 # Backup the .timelog file.
 # Almost certainly pointless now that it is on ZFS.
