try to deal with ~ not expanding, maybe?
Oct 11 07:01:19 heavy systemd[1569407]: Starting nag2al.service...
Oct 11 07:01:19 heavy nag2al-wrapper[1215213]: Command 'nag2al' not found in /usr/local/sbin, /usr/local/bin, /usr/sbin, /usr/bin, /sbin, /bin at /usr/bin/chronic line 69.
Oct 11 07:01:19 heavy chronic[1215218]: ci: ~/RCS/.timelog: No such file or directory
Oct 11 07:01:19 heavy systemd[1569407]: nag2al.service: Main process exited, code=exited, status=1/FAILURE
Oct 11 07:01:19 heavy systemd[1569407]: nag2al.service: Failed with result 'exit-code'.
Oct 11 07:01:19 heavy systemd[1569407]: Failed to start nag2al.service.

--- a/nag2al.service
+++ b/nag2al.service
@@ -6,4 +6,5 @@ ExecStart=%h/.local/bin/nag2al-wrapper
 # Backup the .timelog file.
 # Almost certainly pointless now that it is on ZFS.
 Type=oneshot
-ExecStart=chronic ci -l "-mDaily commit." ~/.timelog
+ExecStart=chronic ci -l "-mDaily commit." .timelog
+WorkingDirectory=%h
