fixup! try to deal with $PATH being fucked because systemd/bullseye is too old for ExecSearchPath=

--- a/nag2al.service
+++ b/nag2al.service
@@ -1,6 +1,7 @@
 [Service]
 # FIXME: uncomment in systemd/bullseye-backports.
 #ExecSearchPath=/usr/local/bin/usr/bin:/bin:%h/.local/bin
+Environment=PATH="$PATH:%h/.local/bin/"
 ExecStart=%h/.local/bin/nag2al-wrapper
 
 # Backup the .timelog file.
