--- a/nag-laptop.service
+++ b/nag-laptop.service
@@ -2,4 +2,4 @@
 # NOTE: "screen -X screen y" not "screen y" because the latter requires a controlling terminal (even though it does not use it).
 # FIXME: uncomment in systemd/bullseye-backports.
 #ExecSearchPath=/usr/local/bin/usr/bin:/bin:%h/.local/bin
-ExecStart=screen -X screen %h/.local/bin/nag-laptop
+ExecStart=screen -X screen %h/.local/bin/nag-laptop -w
