--- a/nag2al.service
+++ b/nag2al.service
@@ -5,6 +5,6 @@ ExecStart=%h/.local/bin/nag2al-wrapper
 
 # Backup the .timelog file.
 # Almost certainly pointless now that it is on ZFS.
-Type=oneshot
-ExecStart=chronic ci -l "-mDaily commit." .timelog
-WorkingDirectory=%h
+# Type=oneshot
+# ExecStart=chronic ci -l "-mDaily commit." .timelog
+# WorkingDirectory=%h
